--- a/style.css
+++ b/style.css
@@ -127,7 +127,9 @@ img {
   column-gap: 2rem;
   width: calc(100% - 2rem);
   margin-left: var(--mb-2);
-  margin-right: var(--mb-2);
+  margin-right: 25rem;
+  /* justify-items: center;
+  justify-content: center; */
 }
 
 .header-1 {
@@ -291,6 +293,7 @@ img {
   flex-direction: column;
   align-items: center;
   padding: 2rem;
+  width: 1200px;
   background-color: var(--dark-color-lighten);
   border-radius: 0.5rem;
   transition: 0.3s;
@@ -363,6 +366,7 @@ img {
   height: 328px;
   background-color: var(--dark-color-lighten);
   padding: 2rem;
+  width: 1200px;
   border-radius: 0.5rem;
   transition: 0.3s;
 }
